--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Corsi</a></li>
+							<li><a href="#one">Studenti</a></li>
+							<li><a href="#two">Aziende</a></li>
+							<li><a href="#three">Contattaci</a></li>
 						</ul>
 					</nav>
 				</div>
