--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Corsi</a></li>
-							<li><a href="#one">Studenti</a></li>
+							<li><a href="#intro">Il Sommo Divino</a></li>
+							<li><a href="#one">Curiosità speziate</a></li>
 							<li><a href="#two">Aziende</a></li>
-							<li><a href="#three">Contattaci</a></li>
+							<li><a href="#three">Contatta la perfezione</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -46,13 +46,13 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/Gerry-Scotti.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Uno dei sorrisi più sensuali d'Italia</h2>
+									<p>Leggende narrano che alla vista del suo sorriso, ogni donna si innamora di lui.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">Innamorati pure tu</a></li>
 									</ul>
 								</div>
 							</div>
