Cambiamento progetto, inserimento nuovi dati

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Generation Italy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Il Sommo Divino</a></li>
-							<li><a href="#one">Curiosità speziate</a></li>
-							<li><a href="#two">Aziende</a></li>
-							<li><a href="#three">Contatta la perfezione</a></li>
+							<li><a href="#intro">Chi siamo</a></li>
+							<li><a href="#one">I nostri docenti</a></li>
+							<li><a href="#two">Che cosa insegnamo</a></li>
+							<li><a href="#three">Contattaci</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,12 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>GERRY SCOTTI</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
+							<h1>Generation Italy</h1>
+							<p>Generation Italy aiuta i giovani a sviluppare competenze altamente qualificate fornendo alle imprese i profili professionali di cui hanno bisogno</p>
 						</div>
 					</section>
 
@@ -49,7 +45,7 @@
 							<a href="#" class="image"><img src="images/Gerry-Scotti.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Uno dei sorrisi più sensuali d'Italia</h2>
+									<h2>Gerry Scotti</h2>
 									<p>Leggende narrano che alla vista del suo sorriso, ogni donna si innamora di lui.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Innamorati pure tu</a></li>
@@ -61,7 +57,7 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
+									<h2>Giacomo Poretti</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -73,7 +69,19 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h2>Aldo Baglio</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Giovanni Storti</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
