Inserimento ulteriori dati "Contattaci"

--- a/index.html
+++ b/index.html
@@ -174,18 +174,18 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<h3>Indirizzo</h3>
+											<span>Via Torino, 543<br />
+											Milano, 20121<br />
+											Italia</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">privacy.italy@generation.org</a>
 										</li>
 										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<h3>Telefono</h3>
+											<span>0587 543 666 1</span>
 										</li>
 										<li>
 											<h3>Social</h3>
