--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Generation Italy</title>
+		<link rel="icon" type="image/x-icon" href="/images/ImageManager.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,6 +35,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
+							<img src="Images/ImageManager.png" alt="Logo">
 							<h1>Generation Italy</h1>
 							<p>Generation Italy aiuta i giovani a sviluppare competenze altamente qualificate fornendo alle imprese i profili professionali di cui hanno bisogno</p>
 						</div>
