--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<!-- Sidebar -->
 	<section id="sidebar">
 		<div class="inner">
+			<img class= "logo" src="images/ImageManager.png" alt="logo" width="100">
 			<nav>
 				<ul>
 					<li><a href="#intro">Chi siamo</a></li>
