Inserimento link sulle icone about us

--- a/index.html
+++ b/index.html
@@ -276,15 +276,15 @@
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span
+									<li><a href="https://twitter.com/generationita" target=”_blank” class="icon brands fa-twitter"><span
 												class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span
+									<li><a href="https://www.facebook.com/GenerationITA/" target=”_blank” class="icon brands fa-facebook-f"><span
 												class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a>
+									<li><a href="https://github.com/raffc00/4SaltiInPadella" target=”_blank” class="icon brands fa-github"><span class="label">GitHub</span></a>
 									</li>
-									<li><a href="#" class="icon brands fa-instagram"><span
+									<li><a href="https://www.instagram.com/generationitaly_youemployed/?hl=it" target=”_blank” class="icon brands fa-instagram"><span
 												class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-linkedin-in"><span
+									<li><a href="https://it.linkedin.com/company/generationitaly" target=”_blank” class="icon brands fa-linkedin-in"><span
 												class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
