--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="is-preload">
-
+	<script src="cookie-notice-js-master/cookie-notice-js-master/src/cookie.notice.js"></script>
 	<!-- Sidebar -->
 	<section id="sidebar">
 		<div class="inner">
