--- a/elements.html
+++ b/elements.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<script src="cookie-notice-js-master/cookie-notice-js-master/src/cookie.notice.js"></script>
 		<!-- Header -->
 			<header id="header">
 				<a href="index.html" class="title">Hyperspace</a>
