modifiche ad about us

--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
 							</li>
 							<li>
 								<h3>Email</h3>
-								<a href="#">privacy.italy@generation.org</a>
+								<p>privacy.italy@generation.org</p>
 							</li>
 							<li>
 								<h3>Telefono</h3>
-								<span>0587 543 666 1</span>
+								<span>0334 865 678</span>
 							</li>
 							<li>
 								<h3>Social</h3>
@@ -256,8 +256,6 @@
 												class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/GenerationITA/" target=”_blank” class="icon brands fa-facebook-f"><span
 												class="label">Facebook</span></a></li>
-									<li><a href="https://github.com/raffc00/4SaltiInPadella" target=”_blank” class="icon brands fa-github"><span class="label">GitHub</span></a>
-									</li>
 									<li><a href="https://www.instagram.com/generationitaly_youemployed/?hl=it" target=”_blank” class="icon brands fa-instagram"><span
 												class="label">Instagram</span></a></li>
 									<li><a href="https://it.linkedin.com/company/generationitaly" target=”_blank” class="icon brands fa-linkedin-in"><span
@@ -276,8 +274,8 @@
 	<footer id="footer" class="wrapper style1-alt">
 		<div class="inner">
 			<ul class="menu">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li>&copy; I diritti sono tutti nostri.</li>
+				<li>Design: <a href="https://github.com/raffc00/4SaltiInPadella" target=”_blank” >4SaltiInPadella</a></li>
 			</ul>
 		</div>
 	</footer>
