modifiche pagina generic.html, ora rinominata wiki.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					</section>
 				</div>
 				<ul class="actions">
-					<li><a href="generic.html" class="button">Learn more</a></li>
+					<li><a href="wiki.html" class="button">Visita il nostro Wiki.html</a></li>
 				</ul>
 			</div>
 		</section>
