inserimento testo insegnamenti

--- a/index.html
+++ b/index.html
@@ -118,54 +118,56 @@
 					<section>
 						<span class="icon solid major fa-code fa-bounce"></span>
 						<h3>Sviluppatore Java</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Il corso offre a tutti i partecipanti solide basi di sviluppo di applicazioni software e di gestione dei servizi web. 
+							In particolare, saranno approfondite le principali tipologie di applicazioni server (jee, mvc e ajax) e i framework oggi maggiormente utilizzati (spring e hibernate). 
+							Le settimane finali saranno dedicate ai servizi web (soap e restful) e, al termine, tutti i partecipanti realizzeranno un progetto finale.</p>
 					</section>
 					<section>
-						<span class="icon solid major fa-lock"></span>
+						<span class="icon solid major fa-lock fa-bounce"></span>
 						<h3>Addetto alle vendite</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Il corso Addetto alle vendite di Generation Italy offre a tutti i partecipanti l’opportunità di conoscere 
+							e imparare le best practices del mondo Retail per la gestione del Punto Vendita. 
+							Al termine del corso, tutti i partecipanti hanno l’opportunità di sostenere un colloquio presso i negozi, aziende o centri commerciali che hanno partecipato all’iniziativa.</p>
 					</section>
 					<section>
-						<span class="icon solid major fa-cog"></span>
+						<span class="icon solid major fa-cog fa-bounce"></span>
 						<h3>Sviluppatore Microsoft / Dot Net (.Net)</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Il corso .Net di Generation Italy per diventare Junior DotNet Developer offre a tutti i partecipanti la possibilità di entrare nel mondo della programmazione Microsoft. 
+							Dot Net, o .Net, è una piattaforma che supporta diversi linguaggi di programmazione, nata per la creazione di applicazioni desktop e server.</p>
 					</section>
 					<section>
-						<span class="icon solid major fa-desktop"></span>
+						<span class="icon solid major fa-desktop fa-bounce"></span>
 						<h3>Microsoft Cloud Developer</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Che cos’è il "cloud"? Letteralmente "nuvola", con cloud si intende la distribuzione di servizi di calcolo 
+							(server, risorse di archiviazione, database, rete, software, analisi e intelligence) tramite Internet, per offrire alle aziende innovazione rapida, risorse flessibili ed economie di scala.</p>
 					</section>
 					<section>
-						<span class="icon solid major fa-link"></span>
+						<span class="icon solid major fa-user-secret fa-bounce"></span>
 						<h3>System and Cybersecurity</h3>
 						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
 							ultricies erat dapibus.</p>
 					</section>
 					<section>
-						<span class="icon major fa-gem"></span>
+						<span class="icon major fa-gem fa-bounce"></span>
 						<h3>Sviluppatore Software Salesforce</h3>
 						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
 							ultricies erat dapibus.</p>
 					</section>
 					<section>
-						<span class="icon major fa-gem"></span>
+						<span class="icon solid major fa-industry fa-bounce"></span>
 						<h3>Operatore Industria 4.0</h3>
 						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
 							ultricies erat dapibus.</p>
 					</section>
 					<section>
-						<span class="icon major fa-gem"></span>
+						<span class="icon solid major fa-burger fa-bounce"></span>
 						<h3>Food & Beverage</h3>
 						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
 							ultricies erat dapibus.</p>
 					</section>
 				</div>
 				<ul class="actions">
-					<li><a href="wiki.html" class="button">Visita il nostro Wiki.html</a></li>
+					<li><a href="wiki.html" target=”_blank” class="button">Visita il nostro Wiki.html</a></li>
 				</ul>
 			</div>
 		</section>
