Aggiunta testo i nostri insegnamenti

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 							Le settimane finali saranno dedicate ai servizi web (soap e restful) e, al termine, tutti i partecipanti realizzeranno un progetto finale.</p>
 					</section>
 					<section>
-						<span class="icon solid major fa-lock fa-bounce"></span>
+						<span class="icon solid major fa-bag-shopping fa-bounce"></span>
 						<h3>Addetto alle vendite</h3>
 						<p>Il corso Addetto alle vendite di Generation Italy offre a tutti i partecipanti l’opportunità di conoscere 
 							e imparare le best practices del mondo Retail per la gestione del Punto Vendita. 
@@ -144,26 +144,34 @@
 					<section>
 						<span class="icon solid major fa-user-secret fa-bounce"></span>
 						<h3>System and Cybersecurity</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Il Cyber Security Analyst si occupa della sicurezza digitale in azienda, dell’intera infrastruttura IT e della prevenzione delle minacce informatiche, implementando sistemi di sicurezza e misure di protezione e controllo.
+							Il corso Cyber Security di Generation Italy ti consentirà di acquisire le competenze principali in ambito di gestione delle reti e dei sistemi e della Cybersecurity, 
+							imparando a configurare la sistemistica delle macchine, degli apparati di rete e delle componenti applicative; l’installazione, 
+							la configurazione e la gestione (manutenzione, aggiornamento e monitoraggio) di reti informatiche e di telecomunicazioni, o di uno o più sottosistemi di un sistema informatico.</p>
 					</section>
 					<section>
 						<span class="icon major fa-gem fa-bounce"></span>
 						<h3>Sviluppatore Software Salesforce</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Salesforce è attualmente il CRM più diffuso al mondo. CRM significa “Customer Relationship Management” ed è un sistema integrato di software che gestisce in modo intelligente e puntuale tutti i rapporti tra un’azienda e i suoi clienti. 
+							Il corso di Generation Italy per diventare Junior Salesforce Developer offre agli aspiranti sviluppatori gli strumenti concettuali e operativi 
+							per essere in grado di elaborare soluzioni sulla piattaforma, tanto come App Builder quanto come Developer, 
+							preparando gli studenti per l’ottenimento di entrambe le certificazioni Salesforce ufficiali.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-industry fa-bounce"></span>
 						<h3>Operatore Industria 4.0</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>L’Operatore Industria 4.0 è la figura specializzata che deve essere in grado di programmare e gestire macchine CNC, integrando conoscenze informatiche, abilità tecniche ed elevati standard attitudinali.
+							Il corso “Operatore Industria 4.0” offre ai partecipanti le competenze necessarie per operare su macchine utensili a controllo numerico, 
+							dalla corretta lettura dei disegni CAD o 3D alla programmazione in codice ISO delle istruzioni che 
+							permettono alle macchine CNC la realizzazione di componenti meccaniche e prodotti per il settore manifatturiero.</p>
 					</section>
 					<section>
 						<span class="icon solid major fa-burger fa-bounce"></span>
 						<h3>Food & Beverage</h3>
-						<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed
-							ultricies erat dapibus.</p>
+						<p>Il corso per diventare cameriere (Food & Beverage) di Generation Italy è dedicato a giovani con forte propensione verso il mondo della ristorazione. 
+							Il training sarà teorico ed esperienziale e consentirà ai partecipanti di ottenere tutte le abilità tecniche e comportamentali adatte a lavorare in questo settore. 
+							Oltre alla formazione su argomenti specifici del settore, ci saranno teamwork, laboratori e l’ottenimento delle certificazioni HACCP e Sicurezza Alimentare. 
+							Al termine del corso cameriere, i candidati avranno l’opportunità di sostenere un colloquio presso alcune attività commerciali operanti nel settore Food & Beverage.</p>
 					</section>
 				</div>
 				<ul class="actions">
