cambimento titolo i nostri sponsor

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 		<!-- Three -->
 		<section id="three" class="wrapper style2 spotlights">
-			<div class="title">I nostri sponsor</div>
+			<h2>I nostri sponsor</h2>
 			<div class="container">
 				<div class="row aln-center">
 					<div class="col-4 col-12-medium">
