--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
 	<title>Generation Italy</title>
-	<link rel="icon" type="image/x-icon" href="/images/Favicon.png">
+	<link rel="icon" type="image/png" href="/images/Favicon.png">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
