--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 						<p>Il corso offre a tutti i partecipanti solide basi di sviluppo di applicazioni software e di gestione dei servizi web. 
 							In particolare, saranno approfondite le principali tipologie di applicazioni server (jee, mvc e ajax) e i framework oggi maggiormente utilizzati (spring e hibernate). 
 							Le settimane finali saranno dedicate ai servizi web (soap e restful) e, al termine, tutti i partecipanti realizzeranno un progetto finale.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/sviluppatore-java/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-bag-shopping fa-bounce"></span>
@@ -125,18 +128,27 @@
 						<p>Il corso Addetto alle vendite di Generation Italy offre a tutti i partecipanti l’opportunità di conoscere 
 							e imparare le best practices del mondo Retail per la gestione del Punto Vendita. 
 							Al termine del corso, tutti i partecipanti hanno l’opportunità di sostenere un colloquio presso i negozi, aziende o centri commerciali che hanno partecipato all’iniziativa.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/addetto-alle-vendite/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-cog fa-bounce"></span>
 						<h3>Sviluppatore Microsoft / Dot Net (.Net)</h3>
 						<p>Il corso .Net di Generation Italy per diventare Junior DotNet Developer offre a tutti i partecipanti la possibilità di entrare nel mondo della programmazione Microsoft. 
 							Dot Net, o .Net, è una piattaforma che supporta diversi linguaggi di programmazione, nata per la creazione di applicazioni desktop e server.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/dot-net-developer/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-desktop fa-bounce"></span>
 						<h3>Microsoft Cloud Developer</h3>
 						<p>Che cos’è il "cloud"? Letteralmente "nuvola", con cloud si intende la distribuzione di servizi di calcolo 
 							(server, risorse di archiviazione, database, rete, software, analisi e intelligence) tramite Internet, per offrire alle aziende innovazione rapida, risorse flessibili ed economie di scala.</p>
+							<ul class="actions">
+								<li><a href="https://genrecruiting.generation.org/welcome?country=81&program=328&location=11460&recruitingPartner=Generation&urlRecruitmentChannel=other&urlLocalRecruitmentChannel=website&_gl=1*17so3yy*_gcl_aw*R0NMLjE2NDg5MTE4MjguQ2owS0NRanc2Si1TQmhDckFSSXNBSDB5TVpqQ01kdW00Q0ZPekFHUWd6T001NFh4WVJjRGJpNlcyNFBrU0lVcVVXNDdPSXVER3M2VDRLRWFBZ3VIRUFMd193Y0I." target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-user-secret fa-bounce"></span>
@@ -145,6 +157,9 @@
 							Il corso Cyber Security di Generation Italy ti consentirà di acquisire le competenze principali in ambito di gestione delle reti e dei sistemi e della Cybersecurity, 
 							imparando a configurare la sistemistica delle macchine, degli apparati di rete e delle componenti applicative; l’installazione, 
 							la configurazione e la gestione (manutenzione, aggiornamento e monitoraggio) di reti informatiche e di telecomunicazioni, o di uno o più sottosistemi di un sistema informatico.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/system-and-cybersecurity-analyst/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon major fa-gem fa-bounce"></span>
@@ -153,6 +168,9 @@
 							Il corso di Generation Italy per diventare Junior Salesforce Developer offre agli aspiranti sviluppatori gli strumenti concettuali e operativi 
 							per essere in grado di elaborare soluzioni sulla piattaforma, tanto come App Builder quanto come Developer, 
 							preparando gli studenti per l’ottenimento di entrambe le certificazioni Salesforce ufficiali.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/sviluppatore-salesforce/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-industry fa-bounce"></span>
@@ -161,6 +179,9 @@
 							Il corso “Operatore Industria 4.0” offre ai partecipanti le competenze necessarie per operare su macchine utensili a controllo numerico, 
 							dalla corretta lettura dei disegni CAD o 3D alla programmazione in codice ISO delle istruzioni che 
 							permettono alle macchine CNC la realizzazione di componenti meccaniche e prodotti per il settore manifatturiero.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/operatore-industria/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 					<section>
 						<span class="icon solid major fa-burger fa-bounce"></span>
@@ -169,6 +190,9 @@
 							Il training sarà teorico ed esperienziale e consentirà ai partecipanti di ottenere tutte le abilità tecniche e comportamentali adatte a lavorare in questo settore. 
 							Oltre alla formazione su argomenti specifici del settore, ci saranno teamwork, laboratori e l’ottenimento delle certificazioni HACCP e Sicurezza Alimentare. 
 							Al termine del corso cameriere, i candidati avranno l’opportunità di sostenere un colloquio presso alcune attività commerciali operanti nel settore Food & Beverage.</p>
+							<ul class="actions">
+								<li><a href="https://italy.generation.org/food-beverage/#apply" target=”_blank” class="button">Candidati!</a></li>
+							</ul>
 					</section>
 				</div>
 				<ul class="actions">
