--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<h2>Gerry Scotti</h2>
 						<p>Leggende narrano che alla vista del suo sorriso, ogni donna si innamora di lui.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Innamorati pure tu</a></li>
+							<li><a href="gerry.html" target=”_blank” class="button">Scopri di più!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
 							erat malesuada quis. Aliquam dapibus.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="giacomo.html" target=”_blank” class="button">Scopri di più!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
 							erat malesuada quis. Aliquam dapibus.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="aldo.html" target=”_blank” class="button">Scopri di più!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 						<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies
 							erat malesuada quis. Aliquam dapibus.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="giovanni.html" target=”_blank” class="button">Scopri di più!</a></li>
 						</ul>
 					</div>
 				</div>
