--- a/wiki.html
+++ b/wiki.html
@@ -94,7 +94,7 @@
 				<div class="content">
 					<div class="inner">
 						<h2>Selettore paragrafo </h2>
-						<p>In questo esempio tutti gli elementi "p"(paragrafi) ​saranno allineati al centro, con un colore di testo rosso </p>
+						<p>In questo esempio tutti gli elementi "p"(paragrafi) saranno allineati al centro, con un colore di testo rosso </p>
 					</div>
 				</div>
 				<a class="image"><img src="images/css.png" alt="selettore p " width="365px"  /></a>
