--- a/wiki.html
+++ b/wiki.html
@@ -47,7 +47,16 @@
 		</section>
 
 		<!-- One -->
-		<section id="one" class="wrapper style2 spotlights">
+		<section id="oneone" class="wrapper style2 spotlights">
+			<section>
+				<div class="content">
+					<div class="inner">
+						<h2>HTML</h2>
+						<p>In informatica l'HTML (HyperText Markup Language) , comunemente noto con l'acronimo HTML, è un linguaggio di markup. Nato per la formattazione e impaginazione di documenti ipertestuali disponibili nel web
+						</p>
+					</div>
+				</div>
+			</section>
 			<section>
 				<a class="image"><img src="images/carbon-1.jpg" alt="carbon" width="50px"  /></a>
 				<div class="content">
@@ -79,7 +88,7 @@
 		</section>
 
 		<!-- Two -->
-		<section id="two" class="wrapper style2 spotlights">
+		<section id="twotwo" class="wrapper style2 spotlights">
 			<section>
 				<div class="content">
 					<div class="inner">
@@ -102,7 +111,7 @@
 			<section>
 				<div class="content">
 					<div class="inner">
-						<h2>selettore class</h2>
+						<h2>Selettore class</h2>
 						<p>In questo esempio tutti gli elementi HTML con class="center" saranno rossi e allineati al centro</p>
 					</div>
 				</div>
