--- a/wiki.html
+++ b/wiki.html
@@ -58,7 +58,7 @@
 				</div>
 			</section>
 			<section>
-				<a class="image"><img src="images/carbon-1.jpg" alt="carbon" width="50px"  /></a>
+				<a class="image"><img src="images/carbon-1.jpg" alt="carbon"   /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Tag "head"</h2>
