aggiusto css wiki

--- a/wiki.html
+++ b/wiki.html
@@ -117,7 +117,7 @@
 				</div>
 				<a class="image"><img src="images/class.png" alt="css" width="365px"  /></a>
 			</section>
-
+		</section>
 		<!-- Four -->
 		<section id="four" class="wrapper style1 fade-up">
 			<div class="inner">
