Ordine generale, voglio tutto perfetto.

--- a/giacomo.html
+++ b/giacomo.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <title>Trollato da Giacomo</title>
-        <body>
-            <div class="tenor-gif-embed" data-postid="12879125" data-share-method="host" data-aspect-ratio="1.69492" data-width="100%"><a href="https://tenor.com/view/tafazzi-martellate-nei-maroni-martellate-sulle-palle-funny-gif-12879125">Tafazzi Martellate Nei Maroni GIF</a>from <a href="https://tenor.com/search/tafazzi-gifs">Tafazzi GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        </body>
-    </head>
+
+<head>
+    <title>Trollato da Giacomo</title>
+</head>
+
+<body>
+    <div class="tenor-gif-embed" data-postid="12879125" data-share-method="host" data-aspect-ratio="1.69492"
+        data-width="100%"><a
+            href="https://tenor.com/view/tafazzi-martellate-nei-maroni-martellate-sulle-palle-funny-gif-12879125">Tafazzi
+            Martellate Nei Maroni GIF</a>from <a href="https://tenor.com/search/tafazzi-gifs">Tafazzi GIFs</a></div>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+</body>
+
 </html>
