--- a/wiki.html
+++ b/wiki.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
@@ -20,25 +16,30 @@
 
 <body class="is-preload">
 	<script src="assets/js/cookie.notice.js"></script>
+
 	<!-- Sidebar -->
+
 	<section id="sidebar">
 		<div class="inner">
 			<img class= "logo" src="images/ImageManager.png" alt="logo" width="100">
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="#one">HTML</a></li>
-					<li><a href="#two">CSS</a></li>
+					<li><a href="#intro">Introduzione</a></li>
+					<li><a href="#oneone">HTML</a></li>
+					<li><a href="#twotwo">CSS</a></li>
 					<li><a href="#four">Contattaci</a></li>
+					<li><a href="index.html">Ritorna alla pagina iniziale</a></li>
 				</ul>
 			</nav>
 		</div>
 	</section>
 
 	<!-- Wrapper -->
+
 	<div id="wrapper">
 
 		<!-- Intro -->
+
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>La nostra wiki </h1>
@@ -47,18 +48,18 @@
 		</section>
 
 		<!-- One -->
+
 		<section id="oneone" class="wrapper style2 spotlights">
 			<section>
 				<div class="content">
 					<div class="inner">
 						<h2>HTML</h2>
-						<p>In informatica l'HTML (HyperText Markup Language) , comunemente noto con l'acronimo HTML, è un linguaggio di markup. Nato per la formattazione e impaginazione di documenti ipertestuali disponibili nel web
-						</p>
+						<p>In informatica l'HTML (HyperText Markup Language) , comunemente noto con l'acronimo HTML, è un linguaggio di markup. Nato per la formattazione e impaginazione di documenti ipertestuali disponibili nel web</p>
 					</div>
 				</div>
 			</section>
 			<section>
-				<a class="image"><img src="images/carbon-1.jpg" alt="carbon"   /></a>
+				<a class="image"><img src="images/carbon-1.jpg" alt="Head"   /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Tag "head"</h2>
@@ -67,7 +68,7 @@
 				</div>
 			</section>
 			<section>
-				<a class="image"><img src="images/bodyg.png" alt="body" data-position="top center" /></a>
+				<a class="image"><img src="images/bodyg.png" alt="Body" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Tag "body"</h2>
@@ -76,7 +77,7 @@
 				</div>
 			</section>
 			<section>
-				<a class="image"><img src="images/bodyg.png" alt="section" data-position="center center" /></a>
+				<a class="image"><img src="images/bodyg.png" alt="Section" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Tag "section"</h2>
@@ -84,18 +85,17 @@
 					</div>
 				</div>
 			</section>
-		
 		</section>
 
 		<!-- Two -->
+
 		<section id="twotwo" class="wrapper style2 spotlights">
 			<section>
 				<div class="content">
 					<div class="inner">
 						<h2>CSS</h2>
 						<p>Il CSS (sigla di Cascading Style Sheets) in informatica è utilizzato per "decorare" la apgina web.
-						   Il CSS può essere inline,esterno o interno.
-						</p>
+						   Il CSS può essere inline,esterno o interno.</p>
 					</div>
 				</div>
 			</section>
@@ -106,7 +106,7 @@
 						<p>In questo esempio tutti gli elementi "p"(paragrafi) saranno allineati al centro, con un colore di testo rosso </p>
 					</div>
 				</div>
-				<a class="image"><img src="images/css.png" alt="selettore p " width="365px"  /></a>
+				<a class="image"><img src="images/css.png" alt="Selettore p " width="365px"  /></a>
 			</section>
 			<section>
 				<div class="content">
@@ -115,10 +115,12 @@
 						<p>In questo esempio tutti gli elementi HTML con class="center" saranno rossi e allineati al centro</p>
 					</div>
 				</div>
-				<a class="image"><img src="images/class.png" alt="css" width="365px"  /></a>
+				<a class="image"><img src="images/class.png" alt="Css" width="365px"  /></a>
 			</section>
 		</section>
+
 		<!-- Four -->
+
 		<section id="four" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>ABOUT US</h2>
@@ -167,14 +169,10 @@
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="https://twitter.com/generationita" target=”_blank” class="icon brands fa-twitter"><span
-												class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/GenerationITA/" target=”_blank” class="icon brands fa-facebook-f"><span
-												class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/generationitaly_youemployed/?hl=it" target=”_blank” class="icon brands fa-instagram"><span
-												class="label">Instagram</span></a></li>
-									<li><a href="https://it.linkedin.com/company/generationitaly" target=”_blank” class="icon brands fa-linkedin-in"><span
-												class="label">LinkedIn</span></a></li>
+									<li><a href="https://twitter.com/generationita" target=”_blank” class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/GenerationITA/" target=”_blank” class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/generationitaly_youemployed/?hl=it" target=”_blank” class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://it.linkedin.com/company/generationitaly" target=”_blank” class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
 						</ul>
@@ -185,6 +183,7 @@
 	</div>
 
 	<!-- Footer -->
+
 	<footer id="footer" class="wrapper style1-alt">
 		<div class="inner">
 			<ul class="menu">
@@ -195,6 +194,7 @@
 	</footer>
 
 	<!-- Scripts -->
+	
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrollex.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
