--- a/gerry.html
+++ b/gerry.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <title>Trollato da Gerry</title>
-        <body>
-            <div class="tenor-gif-embed" data-postid="13965778" data-share-method="host" data-aspect-ratio="1.77778" data-width="100%"><a href="https://tenor.com/view/gerry-scotti-buona-sera-gerry-scotti-buona-sera-gif-13965778">Gerry Scotti Buona Sera GIF</a>from <a href="https://tenor.com/search/gerry+scotti-gifs">Gerry Scotti GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        </body>
-    </head>
+
+<head>
+    <title>Trollato da Gerry</title>
+</head>
+
+<body>
+    <div class="tenor-gif-embed" data-postid="13965778" data-share-method="host" data-aspect-ratio="1.77778"
+        data-width="100%"><a
+            href="https://tenor.com/view/gerry-scotti-buona-sera-gerry-scotti-buona-sera-gif-13965778">Gerry Scotti
+            Buona Sera GIF</a>from <a href="https://tenor.com/search/gerry+scotti-gifs">Gerry Scotti GIFs</a></div>
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+</body>
+
 </html>
