modifiche about us wiki

--- a/wiki.html
+++ b/wiki.html
@@ -146,7 +146,7 @@
 								</div>
 							</div>
 							<ul class="actions">
-								<li><a href="" class="button submit">Invia Messaggio</a></li>
+								<li><a href="TastoMessaggio.html" target=”_blank” class="button style1">Invia Messaggio</a></li>
 							</ul>
 						</form>
 					</section>
